example app : redirects to project page

--- a/examples/meteor-app/meteor-app.html
+++ b/examples/meteor-app/meteor-app.html
@@ -3,5 +3,5 @@
 </head>
 
 <body>
-  <h1>Welcome to <a href="https://github.com/zyzo" target="_blank">meteor-ddp-php</a> demo app</h1>
+  <h1>Welcome to <a href="https://github.com/zyzo/meteor-ddp-php" target="_blank">meteor-ddp-php</a> demo app</h1>
 </body>
