--- a/examples/meteor-app/meteor-app.html
+++ b/examples/meteor-app/meteor-app.html
@@ -3,5 +3,6 @@
 </head>
 
 <body>
-  <h1>Welcome to <a href="https://github.com/zyzo/meteor-ddp-php" target="_blank">meteor-ddp-php</a> demo app</h1>
+  <h1><a href="https://github.com/zyzo/meteor-ddp-php" target="_blank">meteor-ddp-php</a> demo app</h1>
+  <i>=== Javascript on the server, PHP on the client ===</i>
 </body>
