subscribe method :  example + meteor example app

--- a/examples/meteor-app/meteor-app.html
+++ b/examples/meteor-app/meteor-app.html
@@ -4,5 +4,8 @@
 
 <body>
   <h1><a href="https://github.com/zyzo/meteor-ddp-php" target="_blank">meteor-ddp-php</a> demo app</h1>
-  <i>=== Javascript on the server, PHP on the client ===</i>
+  {{> list }}
+
+  <i>===</i><br/>
+  <i>Javascript on the server, PHP on the client</i>
 </body>
